# validiter

./: Cargo.toml  LICENSE-APACHE  README.md
examples/: collect_validated_matrix.rs  collect_vec_with_max_len.rs  collect_vec_with_max_len_simple_validation.rs  extending_with_adapters.rs  macro_usage_playground.rs  multi_validated_iterator.rs  numeric_csv_parsing.rs  using_enum_error_codes.rs  validate_numeric_matrix.rs
src/: at_least.rs  at_most.rs  between.rs  cast_errs.rs  const_over.rs  ensure.rs  err_lift.rs  lib.rs  lift_errs.rs  look_back.rs  msg.rs  valid_err.rs  valid_iter.rs  valid_result.rs  validatable.rs  validate.rs  validated_iterator.rs
src/complex_validations/: at_most.rs  valid_iter.rs  valid_result.rs  validatable.rs
src/macros_by_example/: example_playground.rs  example_playground_using.rs  macros.rs
src/simple_validations/: at_least.rs  at_most.rs  between.rs  valid_err.rs  validate.rs  validated_iterator.rs
src/validation_adapters/: at_least.rs  at_most.rs  between.rs  const_over.rs  ensure.rs  look_back.rs
