[package]
name = "validiter"
version = "0.2.0"
edition = "2021"
description = "Iterator adapters for validating iterations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Yehuda-blip/validiter"
keywords = ["sanitize", "iterator", "validation", "error"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
